# ESP32_Sensor

./: Kconfig  README.md
ads122c04/: Kconfig  ads122c04.c  ads122c04.h
common/: i2c_interface.c  i2c_interface.h
flow_meter/: Kconfig  flow_meter.c  flow_meter.h
icm20600/: Kconfig  icm20600.c  icm20600.h
ina219/: Kconfig  ina219.c  ina219.h
sht21/: Kconfig  sht21.c  sht21.h
test/ADS122C04/: CMakeLists.txt  Makefile  README.md
test/ADS122C04/main/: CMakeLists.txt  Kconfig  ads122c04_test_main.c  component.mk
test/ICM20600/: CMakeLists.txt  Makefile  README.md
test/ICM20600/main/: CMakeLists.txt  Kconfig  component.mk  icm20600_test_main.c
test/INA219/: CMakeLists.txt  Makefile  README.md  sdkconfig
test/INA219/main/: CMakeLists.txt  Kconfig  component.mk  ina219_test_main.c
test/SHT21/: CMakeLists.txt  Makefile  README.md  sdkconfig
test/SHT21/main/: CMakeLists.txt  Kconfig  component.mk  sht21_test_main.c
test/touchscreen/: CMakeLists.txt  Makefile  README.md  sdkconfig.defaults
test/touchscreen/main/: CMakeLists.txt  Kconfig  component.mk  touch_test_main.c
touchscreen/: Kconfig
touchscreen/ft6x36/: ft6x36.c  ft6x36.h
touchscreen/gt911/: gt911.c  gt911.h
touchscreen/include/: touchscreen.h
